--- a/dotnetcore-sample/Views/Home/Contact.cshtml
+++ b/dotnetcore-sample/Views/Home/Contact.cshtml
@@ -8,7 +8,7 @@
     It People Corporation<br />
     Hyderabad, Telangana<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    425.555.0100 India
 </address>
 
 <address>
