--- a/dotnetcore-sample/Views/Home/Contact.cshtml
+++ b/dotnetcore-sample/Views/Home/Contact.cshtml
@@ -5,6 +5,7 @@
 <h3>@ViewData["Message"]</h3>
 
 <address>
+    DevOps with docker
     It People Corporation<br />
     Hyderabad, Telangana<br />
     <abbr title="Phone">P:</abbr>
